@@ -1,3 +1,4 @@
+EXAMPLE.conf
 Makefile
 config.cache
 config.h
